found z-index. #teckel p is no longer opacitated

--- a/mysite/styles/style.css
+++ b/mysite/styles/style.css
@@ -20,7 +20,7 @@ nav {
     justify-content: space-around;
 }
 #logo_link {
-    padding-top: 5px;
+    padding: 5px;
     justify-self: center;
     align-self: center;
 }
@@ -46,9 +46,9 @@ nav a:hover {
 #teckel-box {
     grid-column: 1/4;
     grid-row: 1/3;
-    z-index: -1;
+    z-index: -1;   
 }
-#teckel-img {
+#teckel img {
     width: 100%;
     opacity: 0.5;
 }
@@ -64,21 +64,32 @@ nav a:hover {
     color: #000411;
     grid-column: 1;
     grid-row: 1/2; 
-    box-sizing: content-box;
-    box-shadow: 5px -5px 10px #000411;   
+    box-shadow: 5px -5px 10px #000411;
 }
 .main-grid {
     display:grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr;
+    box-shadow: 5px 5px 10px #000411;
+    border: 2px solid #000411;
 }
-.card-img1 {
+.family-img1 {
+    width: 100%; 
     grid-column: 1/2;
-    border: 5px solid #000411;   
+    grid-row: 1/2;   
 }
-.card-img2 {
+.family-msg {
+    grid-column: 2/5;
+    grid-row: 1/2;
+    box-shadow: 5px 5px 10px;
     
 }
+
+.family-img2 {
+    grid-column: 3/4;
+    grid-row: 1/2;
+    border: 5px solid #000411;
+}
+
 
 
 
